<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:text="@string/name" />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:text="@string/birthday" />

    <TextView
        android:id="@+id/gift"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:text="@string/gift" />
</LinearLayout>