<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:text="@string/zhufu" />

    <TextView
        android:id="@+id/dialog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dialog_title"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_name" />

    <TextView
        android:id="@+id/dialog_add_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/dialog_name"
        android:layout_toEndOf="@+id/dialog_name"
        android:text="@string/name" />

    <TextView
        android:id="@+id/dialog_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dialog_name"
        android:layout_below="@+id/dialog_name"
        android:layout_marginTop="20dp"
        android:text="@string/add_birth" />

    <EditText
        android:id="@+id/dialog_add_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dialog_birth"
        android:layout_toEndOf="@+id/dialog_birth"
        android:ems="10"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/dialog_gift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dialog_birth"
        android:layout_below="@+id/dialog_birth"
        android:layout_marginTop="20dp"
        android:text="@string/add_gift" />

    <EditText
        android:id="@+id/dialog_add_gift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dialog_gift"
        android:layout_toEndOf="@+id/dialog_gift"
        android:ems="10"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/dialog_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dialog_gift"
        android:layout_below="@+id/dialog_gift"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorGreen"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/dialog_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/dialog_phone"
        android:layout_toEndOf="@+id/dialog_phone"
        android:textColor="@color/colorGreen"/>

</RelativeLayout>