<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/form_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/add_name" />

    <TextView
        android:id="@+id/form_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/form_name"
        android:layout_below="@+id/form_name"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:text="@string/add_birth" />

    <TextView
        android:id="@+id/form_gift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/form_birth"
        android:layout_below="@+id/form_birth"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:text="@string/add_gift" />

    <EditText
        android:id="@+id/add_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/form_name"
        android:layout_alignBottom="@+id/form_name"
        android:layout_toEndOf="@+id/form_name"
        android:inputType="text"
        android:ems="15"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/add_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/form_birth"
        android:layout_alignBottom="@+id/form_birth"
        android:layout_toEndOf="@+id/form_birth"
        android:inputType="text"
        android:ems="15"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/add_gift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/form_gift"
        android:layout_alignBottom="@+id/form_gift"
        android:layout_toEndOf="@+id/form_gift"
        android:inputType="text"
        android:ems="15"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_gift"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorGreen"
        android:text="@string/add" />
</RelativeLayout>
